# cpp_otus

./: .gitignore
.github/workflows/: release.yml
week_1/ip/: CMakeLists.txt  README.md  ip_filter.cpp  ip_filter.h  main.cpp  test_version.cpp
